semgrep/tests/e2e/snapshots/test_rule_parser/test_rule_parser__failure__error_messages/badpaths2/error.txt
error: invalid targeting rules
  --> rules/syntax/badpaths2.yaml:8
7 |       # bad syntax: key name should be `include:`
8 |       filename: "*.py"
  |       ^^^^^^^^
9 |     message: "$X is being assigned to one or two"

the `paths:` targeting rules must each be one of ('include', 'exclude')

run with --strict and there were 1 errors loading configs
